--- a/src/ListBox/listBoxOption.css
+++ b/src/ListBox/listBoxOption.css
@@ -15,7 +15,7 @@
     align-items:        center;
 
     margin:             0;
-    padding:            var( --typo-2 ) 27px;
+    padding:            var( --spacing-2 );
 
     cursor:             pointer;
 
@@ -23,7 +23,7 @@
     {
         flex:           0 0 auto;
         align-self:     flex-start;
-        margin-right:   28px;
+        margin-right:   var( --spacing-2 );
     }
 
     .textContainer
